test/bad/functions/variadic08.px

func f(...args: [Float]) def
    return

f([0f])
